--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,3 +1,5 @@
 {
-	"tuleapintegration-desc": "Integrates MediaWiki into Tuleap"
+	"tuleapintegration-desc": "Integrates MediaWiki into Tuleap",
+	"tuleap-login-error": "Login error",
+	"tuleap-login-error-desc": "An error occurred while trying to authenticate against Tuleap"
 }
