--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -4,5 +4,6 @@
 	},
 	"tuleapintegration-desc": "Description of TuleapIntegration for [[Special:Version]]",
 	"tuleap-login-error": "Page name when authentication with Tuleap fails",
-	"tuleap-login-error-desc": "Generic error message when authentication with Tuleap fails"
+	"tuleap-login-error-desc": "Generic error message when authentication with Tuleap fails",
+	"tuleap-login-button": "Label for the login button when Tuleap OAuth is enabled"
 }
