--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -5,5 +5,6 @@
 	"tuleapintegration-desc": "Description of TuleapIntegration for [[Special:Version]]",
 	"tuleap-login-error": "Page name when authentication with Tuleap fails",
 	"tuleap-login-error-desc": "Generic error message when authentication with Tuleap fails",
-	"tuleap-login-button": "Label for the login button when Tuleap OAuth is enabled"
+	"tuleap-login-button": "Label for the login button when Tuleap OAuth is enabled",
+	"tuleap-no-access": "Permission error shown when Tuleap permissions block user"
 }
