Sync I18N from master

--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -1,9 +1,9 @@
 {
 	"@metadata": {
 		"authors": [
+			"Cigaryno",
 			"Gomoko",
-			"Verdy p",
-			"Cigaryno"
+			"Verdy p"
 		]
 	},
 	"tuleapintegration-desc": "Intègre MediaWiki dans Tuleap",
