--- a/i18n/sh.json
+++ b/i18n/sh.json
@@ -7,5 +7,6 @@
 	"tuleap-login-error": "Greška pri prijavljivanju",
 	"tuleap-login-error-desc": "Došlo je do greške prilikom pokušaja autentifikacije u Tuleapu. Molimo kontaktirajte Tuleap administratora",
 	"tuleap-login-button": "Prijavite se koristeći Tuleap",
-	"tuleap-no-access": "Pristup onemogućen"
+	"tuleap-no-access": "Pristup onemogućen",
+	"tuleapintegration-desc": "Uklapa MediaWiki u Tuleap"
 }
