Add next version release note entry

--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,3 +1,10 @@
+= TuleapIntegration 1.0.2 =
+
+This is a security and maintenance release of the TuleapIntegration 1.0 branch.
+
+=== Changes since TuleapIntegration 1.0.1 ===
+* Localisation updates.
+
 = TuleapIntegration 1.0.1 =
 
 This is a security and maintenance release of the TuleapIntegration 1.0 branch.
