--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,3 +1,10 @@
+= TuleapIntegration 1.0.4 =
+
+This is a security and maintenance release of the TuleapIntegration 1.0 branch.
+
+=== Changes since TuleapIntegration 1.0.3 ===
+* Localisation updates.
+
 = TuleapIntegration 1.0.3 =
 
 This is a security and maintenance release of the TuleapIntegration 1.0 branch.
