Add RELEASE-NOTES 1.0.5 stub

--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,3 +1,11 @@
+= TuleapIntegration 1.0.5 =
+
+This is a security and maintenance release of the TuleapIntegration 1.0 branch.
+
+=== Changes since TuleapIntegration 1.0.4 ===
+* Localisation updates.
+* ...
+
 = TuleapIntegration 1.0.4 =
 
 This is a security and maintenance release of the TuleapIntegration 1.0 branch.
