Add RELEASE-NOTES 1.0.5 stub

--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,9 +1,18 @@
+= TuleapIntegration 1.0.5 =
+
+This is a security and maintenance release of the TuleapIntegration 1.0 branch.
+
+=== Changes since TuleapIntegration 1.0.4 ===
+* Localisation updates.
+* ...
+
 = TuleapIntegration 1.0.4 =
 
 This is a security and maintenance release of the TuleapIntegration 1.0 branch.
 
 === Changes since TuleapIntegration 1.0.3 ===
 * Localisation updates.
+* (Tuleap#30731)  Prevent PHP warning on failed OAuth2 flow
 
 = TuleapIntegration 1.0.3 =
 
