--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,43 +1,3 @@
-= TuleapIntegration 1.0.5 =
+= TuleapIntegration 2.0.0 =
 
-This is a security and maintenance release of the TuleapIntegration 1.0 branch.
-
-=== Changes since TuleapIntegration 1.0.4 ===
-* Localisation updates.
-* ...
-
-= TuleapIntegration 1.0.4 =
-
-This is a security and maintenance release of the TuleapIntegration 1.0 branch.
-
-=== Changes since TuleapIntegration 1.0.3 ===
-* Localisation updates.
-* (Tuleap#30731)  Prevent PHP warning on failed OAuth2 flow
-
-= TuleapIntegration 1.0.3 =
-
-This is a security and maintenance release of the TuleapIntegration 1.0 branch.
-
-=== Changes since TuleapIntegration 1.0.2 ===
-* Localisation updates.
-* Replace deprecated hooks "PersonalUrlsHook" and "UserCanHook"
-
-= TuleapIntegration 1.0.2 =
-
-This is a security and maintenance release of the TuleapIntegration 1.0 branch.
-
-=== Changes since TuleapIntegration 1.0.1 ===
-* Localisation updates.
-* Fix variable operator
-
-= TuleapIntegration 1.0.1 =
-
-This is a security and maintenance release of the TuleapIntegration 1.0 branch.
-
-=== Changes since TuleapIntegration 1.0.0 ===
-* Localisation updates.
-* (Tuleap#29624) Fix read permission checks with "local login" configuration
-
-= TuleapIntegration 1.0.0 =
-
-This is the initial release
+This is the initial release of the 2.0 version
